# nfl-draft-2026

./: .gitignore  CLAUDE.md  README.md  docker-compose.README.md  docker-compose.yml  run-app.sh  run-tests.sh  shutdown.sh
back-end/: .dockerignore  .env.example  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.seed  ISSUES.md  OPENAPI.md  build-docker.sh
back-end/.sqlx/: query-00e0090e5c8ac04e81292739a676f06195201c02b49d11f9bbea031b50a630ab.json  query-0371feebb467122bc6663df40767f7aa191cb14244e884a9142e2612a4024733.json  query-04be585ddf65e3ffef4ee10de96e7534ce9395590e674c543963711e51db34f7.json  query-051940a282d47d5c9e62a86e6365c0dd1f7b5401e53de22ad33a8870a64acb52.json  query-0562c0646d7d6ae5e05d785bbc4b88fd536e8762ca3fa74810ccd6adafa6973f.json  query-05e005c6686e5d3e6236dd1268158b17b4d6dc244b8f65c7e2b3a99d77a21c9c.json  query-06b9b5184e42ff16720a2998c2789e43277abda914051327323c9ff51a84fe5e.json  query-0855071192ab77f075bd7c38ed43144cd3bbb8af153d1048763363674dbcd2e9.json  query-092721280d034c50a92818f8335b0b35a9756c321bd83d4aeb54ae849ac8d608.json  query-0cde3f178a87f3f6e0248df928dd4dbcf097aaf3760883a5a18907e28ecdf265.json  query-0d2e6f884f9de7a6e73377d13bfd13771ac408cc8ced7c5c656293b64e851d37.json  query-12182836a6eb903ea432f827d774091afcd43f8e35f15e3c5edc13084b29cc93.json  query-1262dbca90ad9f5f6255e1075034f749c87fbb98faa99fcf8e4f02f577cd8163.json  query-13a773592b03cba4681a135a532e8306c5738aee5f61f02e1f86f6884f77cc24.json  query-13dbad7d477e95b72b075462a1a0e1c9ef7dfa09a1e09cef2b5226f98c647343.json  query-13ffd80d3e3343c6602e3bdd5bcf278fbc0c08bfec7b1034375d01d160061091.json  query-146d572a0bdc1e908de882ad463d53da859478bf612acf1cf056db50775395fc.json  query-152bb37a7e916b9e881bb6d201bef554d84e429669bc7a3126650453153a56ca.json  query-15458e228dd6ce3c166a624cf9d1bcf674954ed2bb995d83f45ea16a5c74523b.json  query-16b6f3cd3d6e1d25a0862f45c07f2dce77fb29f197db6b70e8e9f807f4f9db44.json  query-18fcb93bc7ea90d70bd74cd8e1955e0d4dd97fd748c08aeac4ba0ac902c60792.json  query-1945992ccb772a05ec36e47a9723a89081aee5908454f35c914213a0548e4b0f.json  query-1c248baf3e2e093a8a47aec056928989b3dcd089a0eb121abdec7a36eee79f5c.json  query-1c58495cd26909f539621e694eb033702e2f47c1943d560a9a7d1b9ebee7d5fb.json  query-1d27f2914d96659da29e931badaaba1edfe56d37ade06d448167b9a7cd3b71b3.json  query-1d5e10f649ec721d6169a240c47f0c51f0a0be1580b9df9a2608f660f601160c.json  query-1d81222b0cd106cb739ed2c992e0c0d7869a49f406a834615c60f4a3dc9f501e.json  query-1ed9196a4e99f7023e3d82fe34f895d9523b18ca737088ff32cd19b4e8d0c259.json  query-1ffb6ecba1bde327822bd3afc012062123f4d3ad0ea78c15b3d5d2fb2d3d03cd.json  query-20650f64418f7f0cdd9115cd6557f603afd6ba26c26c9433a886b516544d0b5c.json  query-2172c2081a68bc64df57532ecee84fc7a07ed37a7d1a5ffd1525b8bd31bfb9f6.json  query-21fa01cfdc76ca85fb3c9e25e51c74f0d82e7cc28bfc3d0be035af4377f1b84f.json  query-225bd0796ca5f5b081bdd36a056a317208a79922bc12263b0f7a7e111c6e44ec.json  query-233504437b51d55d2fc9d03467152ba8f066eff4bceba17d50d0ccaca502542c.json  query-2407d51827b8da06c4ec80d636be9fb9ba4348548e99075d168ac514825a773c.json  query-24291a626d4d77a1fff05ad48d33fb7c2ce1c01254d0f35459dbe1954b6bd943.json  query-243a096679626a6e55f724aa9c18ea30eae4efce92a945e5afcd5bcca69e9707.json  query-248897f6345798d728f6014f601f3ca45b8b3aae33afa150555208d7b705dc0b.json  query-26cd180865975d5199af86571a57d61d0dc5a251e05d7e1b8c312be275c889c0.json  query-2746b0367f8b88cd3c90cd66f84725bff8ad8896246a981f07d117030af86f27.json  (+275 more)
back-end/crates/api/: Cargo.toml
back-end/crates/api/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs  state.rs
back-end/crates/api/tests/: acceptance.rs  auto_pick_events.rs  auto_pick_integration.rs  available_players.rs  combine_percentiles.rs  combine_results.rs  draft_state_transitions.rs  draft_validation.rs  drafts.rs  errors.rs  feldman_freaks.rs  health.rs  list.rs  make_pick_errors.rs  not_found.rs  pick_queries.rs  player_evaluation.rs  players.rs  rankings.rs  ras_scoring.rs  realistic_draft_initialization.rs  realistic_drafts.rs  scouting_reports.rs  seed_endpoints.rs  seed_endpoints_extended.rs  teams.rs  (+6 more)
back-end/crates/combine-data-scraper/: Cargo.toml
back-end/crates/db/: Cargo.toml
back-end/crates/domain/: Cargo.toml
back-end/crates/draft-order-scraper/: Cargo.toml
back-end/crates/prospect-rankings-scraper/: Cargo.toml
back-end/crates/seed-data/: Cargo.toml  README.md
back-end/crates/websocket/: Cargo.toml
back-end/data/: README.md  combine_2026.json  combine_2026_mock.json  combine_percentiles.json  draft_order_2026.json  feldman_freaks_2026.json  players_2026.json  team_needs_2026.json  team_seasons_2025.json  teams_nfl.json
back-end/data/rankings/: db_players_2026.json  rankings_2026.json  tankathon_2026.json  template_2026.json  walterfootball_2026.json
back-end/migrations/: 20260201000001_create_teams.sql  20260201000002_create_players.sql  20260201000003_create_drafts.sql  20260202000001_create_scouting_tables.sql  20260202000002_alter_numeric_to_double_precision.sql  20260202000003_create_draft_sessions.sql  20260202000004_create_draft_strategies.sql  20260202000006_create_pick_trades.sql  20260203051338_add_trade_rejected_event_type.sql  20260203051400_add_chart_type_to_sessions.sql  20260204000001_add_unique_player_constraint.sql  20260205000001_create_team_seasons.sql  20260206000001_add_realistic_draft_order.sql  20260206000002_drop_unique_draft_year.sql  20260207000001_add_name_to_drafts.sql  20260208000001_add_controlled_team_ids_to_sessions.sql  20260209000001_add_unique_active_session_per_draft.sql  20260211000001_create_ranking_tables.sql  20260211150913_drop_redundant_ranking_source_index.sql  20260212000001_add_unique_draft_session.sql  20260216000001_add_combine_measurables.sql  20260216000002_fix_combine_measurables_types.sql  20260216000003_create_combine_percentiles.sql  20260225000001_create_feldman_freaks.sql  20260408000001_create_prospect_profiles.sql
back-end/scripts/: scrape-combine.mjs  scrape-draft-order.mjs  scrape-rankings.mjs  seed-entrypoint.sh
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
(+485 files in other folders)
