[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/domain",
    "crates/db",
    "crates/websocket",
    "crates/seed-data",
    "crates/draft-order-scraper",
    "crates/prospect-rankings-scraper",
    "crates/combine-data-scraper",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NFL Draft Simulator Team"]
license = "MIT"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"

# Testing
mockall = "0.13"
reqwest = { version = "0.12", features = ["json"] }

# Async traits
async-trait = "0.1"

# HTML scraping
scraper = "0.22"

# Random number generation
rand = "0.9"

# OpenAPI documentation
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
