[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
uuid.workspace = true
sqlx.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
futures.workspace = true

# Local crates
domain = { path = "../domain" }
db = { path = "../db" }
websocket = { path = "../websocket" }
seed-data = { path = "../seed-data" }

[dev-dependencies]
sqlx.workspace = true
uuid.workspace = true
tower = { workspace = true, features = ["util"] }
reqwest.workspace = true
serde_json.workspace = true
