[package]
name = "db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# Local crates
domain = { path = "../domain" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
