[package]
name = "domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["test-util"] }
