[package]
name = "prospect-rankings-scraper"
version.workspace = true
edition.workspace = true

[[bin]]
name = "prospect-rankings-scraper"
path = "src/main.rs"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
chrono = { workspace = true }
